# PortPlacement

./: CMakeLists.txt  SuperBuild.cmake
AutoPortPlacement/: CMakeLists.txt  qSlicerAutoPortPlacementModule.cxx  qSlicerAutoPortPlacementModule.h  qSlicerAutoPortPlacementModuleWidget.cxx  qSlicerAutoPortPlacementModuleWidget.h
AutoPortPlacement/Logic/: CMakeLists.txt  vtkSlicerAutoPortPlacementLogic.cxx  vtkSlicerAutoPortPlacementLogic.h
AutoPortPlacement/Logic/collisions/: CMakeLists.txt  collisions.h
AutoPortPlacement/Logic/davinci-kinematics/: CMakeLists.txt  davinci.cxx  davinci.h  davinci.h.in
AutoPortPlacement/Logic/optim/: optim.h
AutoPortPlacement/Logic/tests/: CMakeLists.txt  da-vinci-params-load-test.cxx  da-vinci-passive-ik-test.cxx  find-feasible-plan-test.cxx  intra-ik-test.cxx  jacobian-test.cxx
AutoPortPlacement/Resources/UI/: qSlicerAutoPortPlacementModuleWidget.ui
PortPlacement/: CMakeLists.txt  PortPlacement.py
SuperBuild/: External_NLopt.cmake
